fix clock alignment

--- a/src/components/clock/clock.css
+++ b/src/components/clock/clock.css
@@ -1,6 +1,7 @@
 #App-clock{
     user-select: none;
     color: white;
+    align-self: end;
 }
 
 #App-time {
